--- a/less/index.less
+++ b/less/index.less
@@ -57,3 +57,41 @@ html, body {
     height: 100%;
 }
 
+
+
+@page-title-color: #E57373;
+@title-color: #EF9A9A;
+@general-text-color:#FFCDD2; 
+@title-size: 20px;
+@text-size: 16px;
+@background-color: #4C5C96;
+.section-margin (margin-lenght){
+margin: margin-lenght;
+}
+
+.body-format{
+	height: 100vh;
+}
+
+section{
+	color:@general-text-color;
+	background-color: #4C5C96;
+	border: 1px solid black;
+	
+	a {
+		text-decoration: none;
+		color: @general-text-color;
+	}
+}
+
+
+h1{
+	color: @page-title-color;
+
+
+
+}
+.intro-title{
+	color: @title-color;
+	font-size: @title-size;
+}
