--- a/css/index.css
+++ b/css/index.css
@@ -134,22 +134,41 @@ html,
 body {
   height: 100%;
 }
+.display-flex {
+  display: flex;
+  flex-wrap: wrap;
+  width: 40%;
+}
 .body-format {
-  height: 100vh;
+  width: auto;
+  height: 100%;
 }
 section {
-  color: #FFCDD2;
-  background-color: #4C5C96;
-  border: 1px solid black;
+  color: #424242;
+  background-color: #BBDEFB;
+  margin: 2%;
 }
 section a {
   text-decoration: none;
-  color: #FFCDD2;
+  color: #424242;
+  display: flex;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+section p {
+  margin: 2%;
+}
+section .work-experience-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 40%;
 }
 h1 {
-  color: #E57373;
+  color: #C62828;
+  font-size: 50px;
+  margin: 2%;
 }
 .intro-title {
-  color: #EF9A9A;
-  font-size: 20px;
+  color: #212121;
+  font-size: 30px;
 }
