--- a/css/index.css
+++ b/css/index.css
@@ -137,16 +137,18 @@ body {
 .display-flex {
   display: flex;
   flex-wrap: wrap;
-  width: 40%;
 }
 .body-format {
-  width: auto;
-  height: 100%;
+  margin: auto;
+  width: 70vw;
+  height: 100vh;
 }
 section {
   color: #424242;
-  background-color: #BBDEFB;
   margin: 2%;
+  padding: 10px;
+  border: 1px solid gray;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px rgba(0, 0, 0, 0.2);
 }
 section a {
   text-decoration: none;
@@ -157,18 +159,41 @@ section a {
 }
 section p {
   margin: 2%;
+  padding: 10px;
 }
 section .work-experience-list {
   display: flex;
   flex-wrap: wrap;
-  width: 40%;
+  justify-content: space-between;
+}
+.item-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  border: none;
+  box-shadow: none;
+  width: 20vw;
+  margin: 0;
+}
+.item-list div {
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+.education-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 h1 {
   color: #C62828;
   font-size: 50px;
   margin: 2%;
+  padding: 10px;
 }
 .intro-title {
   color: #212121;
   font-size: 30px;
+}
+.hidden {
+  visibility: hidden;
 }
