--- a/less/index.less
+++ b/less/index.less
@@ -54,7 +54,8 @@ table {
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
+	
 }
 
 
@@ -65,10 +66,14 @@ html, body {
 @general-text-color:#424242; 
 @title-size: 30px;
 @text-size: 16px;
-@background-color: #BBDEFB;
+
 .section-margin (@margin-lenght){
 margin: @margin-lenght;
+padding: 10px;
 }
+
+
+
 .line-spacing(@spacing){
 	padding-top: @spacing;
 	padding-bottom: @spacing;
@@ -76,34 +81,61 @@ margin: @margin-lenght;
 .display-flex{
 	display:flex;
 	flex-wrap: wrap;
-	width: 40%;
+	
+	
+	
 }
 
 .body-format{
-	width: auto;
-	height: 100%;
+	margin: auto;
+	width: 70vw;
+	height: 100vh;
+	
 }
 
 
 section{
 	color:@general-text-color;
-	background-color: @background-color;
+
 	.section-margin(2%);
+	border: 1px solid gray;
+	box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 2px 3px rgba(0,0,0,.2);
 	
-	a {
+	
+	a{
 		text-decoration: none;
 		color: @general-text-color;
 		display: flex;
-		.line-spacing(10px)
+		.line-spacing(10px);
 	}
 	p{
 		.section-margin(2%);
+
+		
 	}
+
 	.work-experience-list{
-		.display-flex
+	.display-flex;
+	justify-content: space-between;
+}
+}
+
+.item-list{
+	.display-flex;
+	flex-direction: column;
+	border: none;
+	box-shadow: none;
+	width: 20vw;
+	margin: 0;
+	div{
+		.line-spacing(4px)
 	}
 }
 
+.education-list{
+	.display-flex;
+	justify-content: space-between;
+}
 
 h1{
 	color: @page-title-color;
@@ -116,3 +148,6 @@ h1{
 	font-size: @title-size;
 }
 
+.hidden{
+	visibility: hidden;
+}
