--- a/css/index.css
+++ b/css/index.css
@@ -89,6 +89,8 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  font-family: 'Playfair Display', serif;
+  font-family: 'PT Serif', serif;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -141,20 +143,16 @@ body {
   font-weight: 1000;
   padding: 5px 0;
 }
-.detail-header-format {
-  font-size: 18px;
-  font-weight: 1000;
-  margin: 20px 0px;
-  padding: 5px;
-}
-.display {
-  display: flex;
-  flex-direction: column;
-}
 .two-panels {
   display: flex;
   flex-direction: row;
   margin: auto;
+}
+@media only screen and (max-width: 500px) {
+  .two-panels {
+    width: 100%;
+    flex-direction: column;
+  }
 }
 .left-panel {
   display: flex;
@@ -163,10 +161,22 @@ body {
   color: white;
   background-color: #003D73;
 }
+@media only screen and (max-width: 500px) {
+  .left-panel {
+    width: 100%;
+    flex-direction: column;
+  }
+}
 .right-panel {
   display: flex;
   flex-direction: column;
   width: 60vw;
+}
+@media only screen and (max-width: 500px) {
+  .right-panel {
+    width: 100%;
+    flex-direction: column;
+  }
 }
 .name {
   font-size: 28px;
@@ -226,4 +236,7 @@ body {
 }
 ul {
   list-style-type: circle;
+}
+@media screen only (max-width: 500px) {
+  width: 100%;
 }
